--- a/talksy-ui/src/app/pages/login/login.component.html
+++ b/talksy-ui/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="d-flex flex-column align-items-center justify-content-center min-vh-100">
+<div class="d-flex flex-column align-items-center justify-content-start min-vh-100">
   <img src="/assets/images/logo.jpg" alt="Talksy Logo" class="app-logo" />
   <div class="container-fluid card login-container">
     <h3 class="text-center text-dark">Login</h3>
