--- a/talksy-ui/src/app/pages/register/register.component.scss
+++ b/talksy-ui/src/app/pages/register/register.component.scss
@@ -10,7 +10,7 @@
 }
 
 .register-container {
-  height: 100%;
+  height: 70vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
