--- a/talksy-ui/src/styles.scss
+++ b/talksy-ui/src/styles.scss
@@ -31,7 +31,7 @@ body {
   width: 200px;
   height: 100px;
   border: none;
-  margin-bottom: 50px;
+  margin: 20px;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
   text-align: center;
