--- a/talksy-ui/src/app/pages/login/login.component.html
+++ b/talksy-ui/src/app/pages/login/login.component.html
@@ -10,8 +10,8 @@
       }
     </div>
     }
-    <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
-      <div class="form-group">
+    <form [formGroup]="loginForm" (ngSubmit)="login()">
+      <div class="form-group mb-3">
         <label class="form-label" for="email">Email Address</label>
         <input
           type="email"
