--- a/talksy-ui/src/app/pages/login/login.component.html
+++ b/talksy-ui/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-column align-items-center justify-content-start min-vh-100">
+<div class="d-flex flex-column align-items-center justify-content-start">
   <img src="/assets/images/logo.jpg" alt="Talksy Logo" class="app-logo" />
   <div class="container-fluid card login-container">
     <h3 class="text-center text-dark">Login</h3>
-    <hr />
+    <hr>
     @if (errorMsgs.length) {
     <div class="alert alert-danger" role="alert">
       @for (errorMsg of errorMsgs; track errorMsg) {
@@ -32,7 +32,7 @@
       </div>
       <div class="d-flex justify-content-between mb-3">
         <button
-          type="button"
+          type="submit"
           class="d-flex justify-content-center align-items-center gap-1 btn-primary"
         >
           <em class="fas fa-sign-in-alt"></em>
