--- a/talksy-ui/src/app/pages/register/register.component.html
+++ b/talksy-ui/src/app/pages/register/register.component.html
@@ -1,8 +1,8 @@
-<div class="d-flex flex-column align-items-center justify-content-center min-vh-100">
+<div class="d-flex flex-column align-items-center justify-content-start">
   <img src="/assets/images/logo.jpg" alt="Talksy Logo" class="app-logo" />
   <div class="container-fluid card register-container">
-    <h3 class="text-center text-dark mt-5">Register</h3>
-    <hr />
+    <h3 class="text-center text-dark">Register</h3>
+    <hr>
     @if (errorMsgs.length) {
     <div class="alert alert-danger" role="alert">
       @for (errorMsg of errorMsgs; track errorMsg) {
@@ -81,7 +81,7 @@
 
       <div class="d-flex justify-content-between mb-3 mt-3">
         <button
-          type="button"
+          type="submit"
           class="d-flex justify-content-center align-items-center gap-1 btn-primary"
         >
           <em class="fa fa-user-plus"></em>
@@ -90,7 +90,7 @@
         <div class="d-flex align-items-center justify-content-center gap-2">
           Already have an account ?
           <a
-            routerLink=""
+            routerLink="/login"
             id="register"
             class="btn-secondary d-flex align-items-center justify-content-center"
           >
