Finished authentication workflow with a seamless process to write confirmation code

--- a/talksy-ui/src/app/pages/register/register.component.html
+++ b/talksy-ui/src/app/pages/register/register.component.html
@@ -102,4 +102,7 @@
       </div>
     </form>
   </div>
+  @if (showConfirmAccountModal) {
+    <app-confirm-account (close)="closeConfirmModal()"></app-confirm-account>
+  }
 </div>
