--- a/talksy-ui/src/styles.scss
+++ b/talksy-ui/src/styles.scss
@@ -14,6 +14,17 @@ $light-blue: #cee8fc;
   }
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html, body {
+  overflow: hidden;
+  height: 100%;
+}
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -23,9 +34,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
   background: linear-gradient(to right, $light-gray, $light-blue);
   display: flex;
-  justify-content: center; // keep horizontal centering
-  align-items: flex-start; // anchor content to top so growth is downward
-  padding-top: 20px; // spacing from viewport top
+  justify-content: center; 
+  align-items: flex-start; 
+  padding-top: 20px; 
 }
 
 .app-logo {
@@ -39,7 +50,20 @@ body {
   animation: float 2.5s ease-in-out infinite;
 }
 
+.gray-bg {
+  background-color: $light-gray !important;
+}
 
+.cursor-pointer {
+  cursor: pointer;
+}
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.user-img {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  overflow: hidden;
+  > img {
+    width: 100%;
+  }
+}
