--- a/talksy-ui/src/app/components/contact-list/contact-list.component.html
+++ b/talksy-ui/src/app/components/contact-list/contact-list.component.html
@@ -1,15 +1,15 @@
 <div class="sticky-top bg-white">
   <section class="d-flex justify-content-between align-items-center gap-2 p-2">
     <h4>Chat</h4>
-    @if (!searchNewContact) {
+    @if (!isSearching()) {
     <i
       class="fas fa-comment-medical cursor-pointer"
-      (click)="onSearchContact($event)"
+      (click)="onSearchContact()"
     ></i>
     } @else {
     <i
       class="fas fa-times-circle cursor-pointer"
-      (click)="onExitSearchContact($event)"
+      (click)="onExitSearchContact()"
     ></i>
     }
   </section>
