--- a/talksy-ui/src/app/pages/home/home.component.html
+++ b/talksy-ui/src/app/pages/home/home.component.html
@@ -8,13 +8,14 @@
         <i class="fa-solid fa-message"></i>
       </div>
       <div class="d-flex flex-column align-items-center gap-2">
-        <i class="fa-solid fa-user cursor-pointer"></i>
-        <i class="fa-solid fa-door-open cursor-pointer"></i>
+        <i class="fa-solid fa-user cursor-pointer" (click)="userProfile()"></i>
+        <i class="fa-solid fa-door-open cursor-pointer" (click)="logout()"></i>
       </div>
     </div>
     <div class="d-flex w-100">
       <div class="col-3 overflow-x-scroll d-flex flex-column ">
         <app-contact-list
+          [isSearching]="searchNewContact()"
           (searchNewContact)="updateSearchContact($event)"
         />
         <app-chat-list 
