Fixed plethora of bugs

--- a/talksy-ui/src/app/components/contact-list/contact-list.component.scss
+++ b/talksy-ui/src/app/components/contact-list/contact-list.component.scss
@@ -1,3 +1,9 @@
+.fa-comment-medical, .fa-times-circle {
+  &:hover {
+    color: blue;
+  }
+}
+
 /* Mobile responsiveness */
 @media (max-width: 768px) {
   .sticky-top.bg-white {
