--- a/talksy-ui/src/app/components/chat-list/chat-list.component.html
+++ b/talksy-ui/src/app/components/chat-list/chat-list.component.html
@@ -1,5 +1,5 @@
 <div class="chat-list mt-3">
-  @if (chats().length && !searchNewContact()) { @for (chat of chats(); track chat)
+  @if (chats().length && !searchNewContact()) { @for (chat of chats(); track chat.id)
   {
   <div
     class="d-flex align-items-center justify-content-between border-bottom-gray p-2"
@@ -34,7 +34,7 @@
       }
     </div>
   </div>
-  } } @else if (searchNewContact()) { @for (contact of filteredContacts(); track contact)
+  } } @else if (searchNewContact()) { @for (contact of filteredContacts(); track contact.id)
   {
   <div
     class="d-flex align-items-center justify-content-between border-bottom-gray p-2"
