Working on the profile picture upload bug

--- a/talksy-ui/src/app/pages/home/home.component.html
+++ b/talksy-ui/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
           [searchNewContact]="searchNewContact()"
           [contactSearch]="contactSearch()"
           (searchNewContactChange)="updateSearchContact($event)"
-          (chatSelected)="chatSelected($event)"
+          (chatSelected)="chatSelected($event, recipientProfilePicture().valueOf())"
         />
       </div>
       @if (selectedChat && (selectedChat.id || selectedChat.recipientId)) {
