--- a/talksy-ui/src/app/components/chat-list/chat-list.component.html
+++ b/talksy-ui/src/app/components/chat-list/chat-list.component.html
@@ -8,7 +8,7 @@
     <div class="d-flex gap-2">
       <div class="user-img">
         <img
-          [src]="getUserById(chat.recipientId!)?.profilePicture"
+          [src]="buildPictureUrl(getUserById(chat.recipientId!)?.profilePicture)"
           alt="Profile picture for {{ chat.name }}"
         />
       </div>
@@ -42,7 +42,7 @@
   >
     <div class="d-flex gap-2">
       <div class="user-img">
-        <img [src]="contact.profilePicture" alt="" />
+        <img [src]="buildPictureUrl(contact.profilePicture)" alt="" />
       </div>
       <div class="d-flex flex-column">
         <span>{{ contact.nickname }}</span>
